--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,19 +1,23 @@
 <% if @posts.any? %>
   <% @posts.each do |post| %>
-  <%= image_tag post.image.url(:medium) %>
-
-  <p><%= post.user.email %></p>
-  <p>Posted <%= time_ago_in_words(post.created_at)%> ago</p>
-  <p><%= post.description %></p>
-  <% post.comments.each do |comment| %>
-    <p><%= "#{comment.user.email}" %></p>
-    <p><%= "#{comment.write_a_comment}" %></p>
-  <% end %>
-  <%= link_to "Write a comment", new_post_comment_path(post) %>
-  <%= link_to 'Delete photo', post_path(post), method: :delete %>
+    <%= image_tag post.image.url(:medium) %>
+    <p><%= post.user.email %></p>
+    <p>Posted <%= time_ago_in_words(post.created_at)%> ago</p>
+    <p><%= post.description %></p>
+    <% post.comments.each do |comment| %>
+      <p><%= "#{comment.user.email}" %></p>
+      <p><%= "#{comment.write_a_comment}" %></p>
+    <% end %>
+    <%= form_for [post,@comment] do |f| %>
+      <%= f.label :write_a_comment %>
+      <%= f.text_field :write_a_comment %>
+      <%= f.submit "Submit" %>
+    <% end %>
+    <%= link_to 'Delete photo', post_path(post), method: :delete %>
   <% end %>
 <% else %>
   No photos yet
 <% end %>
 
 <%= link_to "Post a photo", new_post_path %>
+
